# spinali_optical_flow

./: README.md
spinali_optical_flow_description/: CMakeLists.txt  package.xml
spinali_optical_flow_description/launch/: spinali_optical_flow_description.launch.py
spinali_optical_flow_description/meshes/: Base.glb  MCXN947T1HubV0Minimal.glb  OmniWheel.dae  OpticalFlowMinimal.glb  Optical_Flow.mtl  Spacer.glb
spinali_optical_flow_description/urdf/: spinali_optical_flow.urdf  spinali_optical_flow.urdf.xacro
spinali_optical_flow_integration/: package.xml  setup.cfg  setup.py
spinali_optical_flow_integration/launch/: argus_to_pointcloud.launch.py
spinali_optical_flow_integration/rviz/: argus_pointcloud.rviz
spinali_optical_flow_integration/spinali_optical_flow_integration/: argus_to_pointcloud.py
