<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spinali_optical_flow_integration</name>
  <version>0.0.0</version>
  <description>Spinali Optical Flow Integration - ArgusResults to PointCloud2 converter</description>
  <maintainer email="info@cognipilot.com">cogni</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>afbr_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>spinali_optical_flow_description</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>synapse_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
